--- a/school_managementflutter/android/app/build.gradle
+++ b/school_managementflutter/android/app/build.gradle
@@ -49,6 +49,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        
     }
 
     buildTypes {
@@ -64,4 +65,4 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {implementation "com.android.support:exifinterface:$flutterExifPluginVersion"}
