--- a/school_managementflutter/pubspec.yaml
+++ b/school_managementflutter/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   mongo_dart: ^0.10.1
   http: ^1.2.1
+  image_picker: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
